// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block \`triangle="hide"\` 1`] = `
<div
  className="block-picker "
  style={
    {
      "background": "#fff",
      "borderRadius": "6px",
      "boxShadow": "0 1px rgba(0,0,0,.1)",
      "position": "relative",
      "width": 170,
    }
  }
>
  <div
    style={
      {
        "borderColor": "transparent transparent #22194d transparent",
        "borderStyle": "solid",
        "borderWidth": "0 10px 10px 10px",
        "display": "none",
        "height": "0px",
        "left": "50%",
        "marginLeft": "-10px",
        "position": "absolute",
        "top": "-10px",
        "width": "0px",
      }
    }
  />
  <div
    style={
      {
        "alignItems": "center",
        "background": "#22194d",
        "borderRadius": "6px 6px 0 0",
        "display": "flex",
        "height": "110px",
        "justifyContent": "center",
        "position": "relative",
      }
    }
  >
    <div
      style={
        {
          "color": "#fff",
          "fontSize": "18px",
          "position": "relative",
        }
      }
    >
      #22194d
    </div>
  </div>
  <div
    style={
      {
        "padding": "10px",
      }
    }
  >
    <div
      style={
        {
          "marginRight": "-10px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#D9E3F0",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#D9E3F0"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#F47373",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#F47373"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#697689",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#697689"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#37D67A",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#37D67A"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#2CCCE4",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#2CCCE4"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#555555",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#555555"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#dce775",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#dce775"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#ff8a65",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#ff8a65"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#ba68c8",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#ba68c8"
        />
      </span>
      <div
        style={
          {
            "clear": "both",
          }
        }
      />
    </div>
    <div
      style={
        {
          "position": "relative",
        }
      }
    >
      <input
        id="rc-editable-input-4"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        spellCheck="false"
        style={
          {
            "border": "0px",
            "borderRadius": "4px",
            "boxShadow": "inset 0 0 0 1px #ddd",
            "boxSizing": "border-box",
            "color": "#666",
            "fontSize": "12px",
            "height": "22px",
            "outline": "none",
            "padding": "0 7px",
            "width": "100%",
          }
        }
        value="#22194D"
      />
    </div>
  </div>
</div>
`;

exports[`Block renders correctly 1`] = `
<div
  className="block-picker "
  style={
    {
      "background": "#fff",
      "borderRadius": "6px",
      "boxShadow": "0 1px rgba(0,0,0,.1)",
      "position": "relative",
      "width": 170,
    }
  }
>
  <div
    style={
      {
        "borderColor": "transparent transparent #22194d transparent",
        "borderStyle": "solid",
        "borderWidth": "0 10px 10px 10px",
        "display": undefined,
        "height": "0px",
        "left": "50%",
        "marginLeft": "-10px",
        "position": "absolute",
        "top": "-10px",
        "width": "0px",
      }
    }
  />
  <div
    style={
      {
        "alignItems": "center",
        "background": "#22194d",
        "borderRadius": "6px 6px 0 0",
        "display": "flex",
        "height": "110px",
        "justifyContent": "center",
        "position": "relative",
      }
    }
  >
    <div
      style={
        {
          "color": "#fff",
          "fontSize": "18px",
          "position": "relative",
        }
      }
    >
      #22194d
    </div>
  </div>
  <div
    style={
      {
        "padding": "10px",
      }
    }
  >
    <div
      style={
        {
          "marginRight": "-10px",
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#D9E3F0",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#D9E3F0"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#F47373",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#F47373"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#697689",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#697689"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#37D67A",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#37D67A"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#2CCCE4",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#2CCCE4"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#555555",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#555555"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#dce775",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#dce775"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#ff8a65",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#ff8a65"
        />
      </span>
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "#ba68c8",
              "borderRadius": "4px",
              "cursor": "pointer",
              "float": "left",
              "height": "22px",
              "marginBottom": "10px",
              "marginRight": "10px",
              "outline": "none",
              "position": "relative",
              "width": "22px",
            }
          }
          tabIndex={0}
          title="#ba68c8"
        />
      </span>
      <div
        style={
          {
            "clear": "both",
          }
        }
      />
    </div>
    <div
      style={
        {
          "position": "relative",
        }
      }
    >
      <input
        id="rc-editable-input-1"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        spellCheck="false"
        style={
          {
            "border": "0px",
            "borderRadius": "4px",
            "boxShadow": "inset 0 0 0 1px #ddd",
            "boxSizing": "border-box",
            "color": "#666",
            "fontSize": "12px",
            "height": "22px",
            "outline": "none",
            "padding": "0 7px",
            "width": "100%",
          }
        }
        value="#22194D"
      />
    </div>
  </div>
</div>
`;

exports[`BlockSwatches renders correctly 1`] = `
<div
  style={
    {
      "marginRight": "-10px",
    }
  }
>
  <span
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "background": "#fff",
          "borderRadius": "4px",
          "cursor": "pointer",
          "float": "left",
          "height": "22px",
          "marginBottom": "10px",
          "marginRight": "10px",
          "outline": "none",
          "position": "relative",
          "width": "22px",
        }
      }
      tabIndex={0}
      title="#fff"
    />
  </span>
  <span
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "background": "#999",
          "borderRadius": "4px",
          "cursor": "pointer",
          "float": "left",
          "height": "22px",
          "marginBottom": "10px",
          "marginRight": "10px",
          "outline": "none",
          "position": "relative",
          "width": "22px",
        }
      }
      tabIndex={0}
      title="#999"
    />
  </span>
  <span
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "background": "#000",
          "borderRadius": "4px",
          "cursor": "pointer",
          "float": "left",
          "height": "22px",
          "marginBottom": "10px",
          "marginRight": "10px",
          "outline": "none",
          "position": "relative",
          "width": "22px",
        }
      }
      tabIndex={0}
      title="#000"
    />
  </span>
  <div
    style={
      {
        "clear": "both",
      }
    }
  />
</div>
`;
